Refactor TokenService to enhance access and refresh token creation; extract payload creation into separate methods and streamline permissions handling